# uniffi-swift-async-example

./: Cargo.toml  Readme.md  make.sh
Andaluh/Andaluh/: AndaluhApp.swift  ContentView.swift
Andaluh/Andaluh.xcodeproj/: project.pbxproj
Andaluh/Andaluh.xcodeproj/project.xcworkspace/xcuserdata/terhechte.xcuserdatad/: UserInterfaceState.xcuserstate
Andaluh/Andaluh.xcodeproj/xcuserdata/terhechte.xcuserdatad/xcschemes/: xcschememanagement.plist
include/: module.modulemap  swiftandaluh.swift  swiftandaluhFFI.h
src/: lib.rs  types.rs
