[package]
name = "swiftandaluh"
version = "0.1.0"
edition = "2021"

[lib]
name = "swiftandaluh"
crate-type = ["staticlib", "cdylib", "lib"]

[[bin]]
name = "uniffi-bindgen"
required-features = ["uniffi/cli"]

[package.metadata.xcframework]
include-dir = "include"
iOS = true
macOS = false
simulators = true
zip = false
lib-type = "staticlib"

[profile.release]
panic = 'unwind'
lto = true
opt-level = 'z'
strip = "debuginfo"

[dependencies]
andaluh = "0.1.2"
async-std = "1.12.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
spanish-numbers = "0.1.4"
tts = "0.25.5"
uniffi = { git = "https://github.com/mozilla/uniffi-rs/", features = [ "build", "bindgen", "cli" ] }

